improvements to fn:unparsed-text implementation, fn:string-join implementation and few other existing codebase improvements